--- a/index.html
+++ b/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Temperature Converter</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <h1>
-        Temperature Converter
-      </h1>
-      <div class="converter-row">
-        <div class="col">
-          <label>Fahrenheit</label>
-          <input type="number" id="fahrenheit" />
-        </div>
 
-        <div class="col">
-          <label>Celsius</label>
-          <input type="number" id="celsius" />
-        </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/cbf1616e77.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
+    <title>Netflix -Watch TV Shows Online, Watch Movies Online</title>
+</head>
 
-        <div class="col">
-          <label>Kelvin</label>
-          <input type="number" id="kelvin" />
+<body>
+    <header class="showcase">
+        <div class="showcase-top">
+            <img src="./images/logo.png" alt="Netflix">
+            <a href="#" class="btn btn-rounded">Sign In</a>
         </div>
-      </div>
-    </div>
-    <script src="script.js"></script>
-  </body>
+        <div class="showcase-content">
+            <h1>See what's next</h1>
+            <p>Watch Anywhere. Cancel anytime</p>
+            <a href="" class="btn btn-xl">
+                Watch Free for 30 Days <i class="fas fa-chevron-right btn-icon"></i>
+            </a>
+        </div>
+    </header>
+    <section class="tabs">
+        <div class="container">
+            <div id="tab-1" class="tab-item tab-border">
+                <i class="fas fa-door-open fa-3x"></i>
+                <p class="hide-sm">Cancel anytime</p>
+            </div>
+            <div id="tab-2" class="tab-item ">
+                <i class="fas fa-tablet-alt fa-3x"></i>
+                <p class="hide-sm">Watch anywhere</p>
+            </div>
+            <div id="tab-3" class="tab-item ">
+                <i class="fas fa-tags fa-3x"></i>
+                <p class="hide-sm">Pick your price</p>
+            </div>
+        </div>
+    </section>
+</body>
+
 </html>
